# implicit_lambda

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  codegen.py  pyproject.toml  setup.cfg  setup.py
.benchmarks/Windows-CPython-3.7-64bit/: 0001_1d4ebaf2feef2921825fa7ea1b9751f7f9e7c7e6_20181224_220826_uncommited-changes.json  0002_1d4ebaf2feef2921825fa7ea1b9751f7f9e7c7e6_20181224_220913_uncommited-changes.json  0003_1d4ebaf2feef2921825fa7ea1b9751f7f9e7c7e6_20181224_220930_uncommited-changes.json  0004_1d4ebaf2feef2921825fa7ea1b9751f7f9e7c7e6_20181224_221022_uncommited-changes.json  0005_1d4ebaf2feef2921825fa7ea1b9751f7f9e7c7e6_20181224_221041_uncommited-changes.json
example/: example.py
src/blackhc/implicit_lambda/: __init__.py  args_resolver.py  builtins.py  codegen.py  expression.py  functools.py  implicit_lambda.py  interpret.py  itertools.py
src/blackhc/implicit_lambda/details/: codegen.py  collect_args.py  expression.py  glue.py  interpret.py  lambda_dsl.py  placeholders.py
src/blackhc/implicit_lambda/tests/: test_args_resolver.py  test_auto_lambdas.py  test_binary_ops.py  test_codegen.py  test_collect_args.py  test_implicit_lambda.py  test_ops.py  (+3 more)
src/implicit_lambda/: __init__.py  args_resolver.py  builtins.py  functools.py  itertools.py
src/implicit_lambda/details/: codegen.py  collect_args.py  expression.py  glue.py  interpret.py  lambda_dsl.py  placeholders.py
src/implicit_lambda/tests/: test_args_resolver.py  test_auto_lambdas.py  test_codegen.py  test_implicit_lambda.py  test_ops.py  test_performance.py  test_placeholders.py  test_special_ops.py
